--- a/awx-demo-app/mysql/meta/main.yml
+++ b/awx-demo-app/mysql/meta/main.yml
@@ -33,3 +33,7 @@ galaxy_info:
 dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
+
+# Include collections de módulos necesarios
+collections:
+  - community.mysql
