--- a/awx-demo-app/mysql/tasks/main.yml
+++ b/awx-demo-app/mysql/tasks/main.yml
@@ -19,8 +19,11 @@
 - name: ensure mysql started
   service: name=mysql state=started enabled=yes
 
+- name: set root password
+  command: mysql -uroot -e "ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY 'root'; FLUSH PRIVILEGES;"
+
 - name: create demo database
-  community.mysql.mysql_db: name=demo state=present
+  command: mysql -uroot -e "CREATE DATABASE IF NOT EXISTS demo"
 
 - name: create demo user
-  community.mysql.mysql_user: name=demo password=demo priv=demo.*:ALL host='%' state=present
+  command: mysql -uroot -e "CREATE USER IF NOT EXISTS 'demo'@'%' IDENTIFIED BY 'demo'"
