--- a/awx-demo-app/apache2/tasks/main.yml
+++ b/awx-demo-app/apache2/tasks/main.yml
@@ -8,7 +8,7 @@
     - libapache2-mod-wsgi-py3
 
 - name: ensure mod_wsgi enabled
-  apache2_module: state=present name=wsgi
+  command: a2enmod wsgi
   notify: restart apache2
 
 - name: de-activate default apache site
